# vcf-validator

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  appveyor.yml  flake.nix  install_dependencies.bat  install_dependencies.sh  install_dependencies_mac.sh
.github/workflows/: build.yml
cpp/src/bioformats/vcf/: HG00731_errors  SConstruct  abort_error_policy.cpp  file_structure.hpp  main.cpp  meta_entry.cpp  meta_entry_visitor.hpp  parsing_state.cpp  record.cpp  record.hpp  report_error_policy.cpp  semantic_validator.hpp  source.cpp  store_parse_policy.cpp  validate_optional_policy.cpp  validator.hpp  validator_detail.hpp  vcf.dot  vcf_file_structure.cpp  vcf_file_structure.hpp  vcf_ragel.cpp  vcf_v41.ragel  vcf_validator.cpp  vcf_validator.h  vcf_validator.hpp  vcf_validator_detail.hpp
cpp/test/: invalid.vcf  invalid_context.vcf  valid.vcf  warning.vcf
dependencies/Csu-85/: Makefile  README.md
dependencies_mac/Csu-85/: .gitignore
docker/: Dockerfile  Dockerfile.prod  Dockerfile_debian_dynamic  Dockerfile_debian_static  build_dynamic.sh  build_static.sh  entrypoint.sh  gcc-x86.patch  install-dependencies-docker.sh
docker_mac/: Dockerfile
docs/: developer-guide.md  roadmap.md  user-landpage.md
inc/: cmake_config.hpp.in
inc/assembly_report/: assembly_report.hpp
inc/fasta/: faidx.hpp  fasta.hpp
inc/mac_specific/odb/: Makefile.in  cache-traits.hxx  callback.cxx  config.h  connection.hxx  connection.ixx  connection.txx  container-traits.hxx  core.hxx  database.cxx  database.hxx  database.ixx  exception.hxx  exceptions.cxx  exceptions.hxx  forward.hxx  lazy-pointer-traits.hxx  lazy-ptr-impl.cxx  lazy-ptr-impl.hxx  lazy-ptr-impl.txx  lazy-ptr.hxx  lazy-ptr.ixx  libodb-vc10.vcxproj  libodb-vc11.vcxproj  libodb-vc12.vcxproj  libodb-vc12.vcxproj.filters  libodb-vc8.vcproj  libodb-vc9.vcproj  no-id-object-result.txx  object-result.hxx  polymorphic-map.hxx  polymorphic-object-result.txx  post.hxx  pre.hxx  query-dynamic.cxx  query-dynamic.hxx  query-dynamic.txx  query.hxx  result.cxx  result.hxx  (+29 more)
inc/util/: algo_utils.hpp  cli_utils.hpp  curl_easy.hpp  file_utils.hpp  logger.hpp  stream_utils.hpp  string_utils.hpp
inc/vcf/: assembly_check_report_writer.hpp  assembly_checker.hpp  assembly_report_reader.hpp  assembly_report_writer.hpp  compression.hpp  debugulator.hpp  error-odb.hpp  error-odb.hxx  error-odb.ipp  error-odb.ixx  error.hpp  error_policy.hpp  fasta.hpp  file_structure.hpp  fixer.hpp  meta_entry_visitor.hpp  normalizer.hpp  odb_report.hpp  optional_policy.hpp  output.hpp  parse_policy.hpp  parsing_state.hpp  parsing_utils.hpp  ploidy.hpp  record.hpp  record_cache.hpp  report_reader.hpp  report_writer.hpp  sqlite_report.hpp  stdout_report_writer.hpp  string_constants.hpp  summary_report_writer.hpp  validator.hpp  validator_detail.hpp  validator_detail_v41.hpp  validator_detail_v42.hpp  validator_detail_v43.hpp  validator_detail_v44.hpp  vcf_fasta_relation.hpp  vcf_fasta_variant.hpp
inc/windows_specific/odb/: Makefile.am  callback.hxx  config.h.in  connection.cxx  database.txx  function-table.hxx  lazy-ptr-impl.ixx  lazy-ptr.txx  libodb-vc10.vcxproj  libodb-vc11.vcxproj  libodb-vc11.vcxproj.filters  libodb-vc12.vcxproj  libodb-vc12.vcxproj.filters  libodb-vc8.vcproj  libodb-vc9.vcproj  no-id-object-result.hxx  no-op-cache-traits.hxx  nullable.hxx  pointer-traits.hxx  polymorphic-info.hxx  polymorphic-map.ixx  polymorphic-map.txx  polymorphic-object-result.hxx  prepared-query.cxx  prepared-query.hxx  query-dynamic.ixx  result.txx  schema-catalog.cxx  schema-version.hxx  section.cxx  section.hxx  session.ixx  statement.cxx  statement.hxx  std-forward-list-traits.hxx  std-set-traits.hxx  traits.hxx  vector-impl.ixx  vector-traits.hxx  vector.ixx  (+2 more)
lib/assembly_report/: assembly_report.hpp
lib/bioio/: LICENSE_BIOIO
lib/windows_specific/: odb-sqlite.lib  odb.lib  sqlite3.lib
sqlitetest/: producer_consumer.cpp  write_read.cpp
src/: assembly_checker_main.cpp  debugulator_main.cpp  main.cpp  validator_main.cpp
src/fasta/: faidx.cpp  fasta.cpp
src/util/: curl_easy.cpp  stream_utils.cpp
src/vcf/: abort_error_policy.cpp  assembly_checker.cpp  assembly_report_writer.cpp  compression.cpp  debugulator.cpp  error-odb.cpp  error-odb.cxx  error.cpp  fasta.cpp  fixer.cpp  main.cpp  meta_entry.cpp  normalizer.cpp  odb_report.cpp  output.cpp  parsing_state.cpp  record.cpp  report_error_policy.cpp  report_writer.cpp  source.cpp  sqlite_report.cpp  store_parse_policy.cpp  validate_optional_policy.cpp  validator.cpp  validator_detail.hpp  vcf.ragel  vcf_fasta_relation.cpp  vcf_fasta_variant.cpp  vcf_v41.ragel  vcf_v42.ragel  vcf_v43.ragel  vcf_v44.ragel
test/: chr1_100v_100s.vcf  invalid.vcf  invalid_context.vcf  main_test.cpp  valid.vcf  warning.vcf
test/assembly_report/: assembly_report_test.cpp
test/fasta/: faidx_test.cpp  fasta_test.cpp
test/input_files/: complexfile_passed_000.vcf.errors.1472743634194.db
test/input_files/assembly_report/: GCF_000007105.1_ASM710v1_assembly_report.txt  assembly_report.txt  failed_same_synonym_for_different_contigs.txt  passed_with_same_synonym_on_same_line.txt
test/input_files/failed/: failed_000.vcf  failed_001.vcf  failed_002.vcf  failed_003.vcf  failed_004.vcf  failed_fileformat_000.vcf
test/input_files/fasta/: single_chromosome.fa  single_chromosome.fa.fai  whole_genome.fa  whole_genome.fa.fai
test/vcf/: assembly_checker_integration_test.cpp  assembly_checker_test.cpp  assembly_checker_test_aux.cpp  assembly_checker_test_aux.hpp  assembly_report_writer_test.cpp  compressed_file_test.cpp  debugulator_integration_test.cpp  debugulator_test.cpp  input_files_test.cpp  main_test.hpp  metaentry_test.cpp  normalize_test.cpp  optional_policy_test.cpp  output_test.cpp  parser_test_aux.hpp  parser_v41_test.cpp  parser_v42_test.cpp  parser_v43_test.cpp  parser_v44_test.cpp  ploidy_test.cpp  predefined_format_tags_test.cpp  predefined_info_tags_test.cpp  record_cache_test.cpp  record_test.cpp  report_writer_test.cpp  test_utils.hpp
(+676 files in other folders)
